@@ -1,4 +1,5 @@
 [1.9.9]
+- API Addition: Add support for stripping whitespace in PixmapPacker
 - API Addition: Add support for 9 patch packing in PixmapPacker
 - API Addition: Pressure support for ios/android. https://github.com/libgdx/libgdx/pull/5270
 - Update to Lwjgl 3.2.0
